[gd_scene load_steps=9 format=3 uid="uid://c6vs1yn5jv11w"]

[ext_resource type="Script" uid="uid://dv5rr6wkps7v2" path="res://scenes/screens/battle/battle.gd" id="1_1q0n7"]
[ext_resource type="Script" uid="uid://bnby2sebjora2" path="res://lib/managers/battle_manager.gd" id="2_f7stq"]
[ext_resource type="Script" uid="uid://kbvcu1r5w452" path="res://lib/state_machne/state_machine.gd" id="2_km7qt"]
[ext_resource type="Script" uid="uid://c8joxowwshpqh" path="res://scenes/screens/battle/states/planning.gd" id="3_4grbx"]
[ext_resource type="Script" uid="uid://bbdb5xlnhqe0o" path="res://scenes/screens/battle/states/executing.gd" id="4_po8hi"]
[ext_resource type="Script" uid="uid://c8omb5q6okf6u" path="res://scenes/screens/battle/states/unit_selected.gd" id="6_kqxcs"]
[ext_resource type="PackedScene" uid="uid://cp7u7ranfmgt6" path="res://scenes/screens/battle/panels/actions_panel.tscn" id="7_xcah6"]
[ext_resource type="PackedScene" uid="uid://cprgcwiqvm0r" path="res://scenes/screens/battle/panels/order_panel_item.tscn" id="8_m4bs7"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_1q0n7")

[node name="PlayerParty" type="Node2D" parent="."]
position = Vector2(465, 393)

[node name="EnemyParty" type="Node2D" parent="."]
position = Vector2(883, 402)

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2_f7stq")
metadata/_custom_type_script = "uid://bnby2sebjora2"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_km7qt")
initial_state = NodePath("Planning")
metadata/_custom_type_script = "uid://kbvcu1r5w452"

[node name="Planning" type="Node" parent="StateMachine" node_paths=PackedStringArray("battle_manager")]
script = ExtResource("3_4grbx")
battle_manager = NodePath("../../BattleManager")
metadata/_custom_type_script = "uid://b65psgm5psw8d"

[node name="Executing" type="Node" parent="StateMachine" node_paths=PackedStringArray("battle_manager")]
script = ExtResource("4_po8hi")
battle_manager = NodePath("../../BattleManager")

[node name="UnitSelected" type="Node" parent="StateMachine"]
script = ExtResource("6_kqxcs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionsPanel" parent="CanvasLayer" instance=ExtResource("7_xcah6")]
visible = false
custom_minimum_size = Vector2(300, 100)
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.2
anchor_bottom = 0.8
offset_left = -300.0
grow_horizontal = 1

[node name="OrderPanel" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
alignment = 1

[node name="OrderPanelItem" parent="CanvasLayer/OrderPanel" instance=ExtResource("8_m4bs7")]
layout_mode = 2

[node name="OrderPanelItem2" parent="CanvasLayer/OrderPanel" instance=ExtResource("8_m4bs7")]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
text = "Start battle"
